#491 Fix jumping text box when editing, create backbone view for contentEditable div when editing text, fix miscalculated hover state trigger for text

--- a/app/assets/stylesheets/text_widgets.css.less
+++ b/app/assets/stylesheets/text_widgets.css.less
@@ -5,22 +5,25 @@
 .text-widget {
   .scale(0.48);
 
-  outline: none; /* fix for weird border from contentEditable */
-  padding: 20px 20px 4px 20px;
+  /* keep text left when typing in scaled element */
+  -webkit-transform-origin:0 0;
+
+  /* fix for weird border from contentEditable in some browsers */
+  outline: none;
+
+  padding: 10px;
   border: 2px dashed #0c3f86;
   min-width: 40px;
   text-align: left;
-  white-space: nowrap;
-  overflow-x: scroll;
 }
 
+/* Helps prevent line breaks when editing text widgets */
 [contenteditable="true"].text-widget br {
   display: none;
 }
 
 [contenteditable="true"].text-widget * {
   display: inline;
-  white-space: nowrap;
 }
 
 .text-widget:hover {
